Fix post header

--- a/assets/src/styles/main.less
+++ b/assets/src/styles/main.less
@@ -1,6 +1,7 @@
 @import (less) "skeleton-css/css/normalize.css";
 @import (less) "skeleton-css/css/skeleton.css";
 @import (less) "includes/monokai.css";
+@import (less) "includes/font-awesome.min.css";
 
 @font-face {
   font-family: Lato;
