--- a/default.hbs
+++ b/default.hbs
@@ -24,6 +24,6 @@
     {{ghost_foot}}
     <script src="{{asset "js/highlight.js"}}" charset="utf-8"></script>
     <script src="{{asset "js/bundle.js"}}" charset="utf-8"></script>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5601be32e4838140" async="async"></script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5601be32e4838140"></script>
   </body>
 </html>
