--- a/assets/src/styles/includes/post.less
+++ b/assets/src/styles/includes/post.less
@@ -16,11 +16,50 @@
         background: #118DF0;
         color: #fff;
         padding: 10px 100px 10px 100px;
+        position: relative;
+        display: flex;
+        align-items: center;
 
         .post-title {
           font-size: 54px;
           font-family: Lato-Bold;
           letter-spacing: normal;
+          margin-top: -35px;
+        }
+
+        .post-info {
+          list-style: none;
+          margin: 0;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          background: rgba(255, 255, 255, .05);
+          width: ~"calc(100% - 105px)";
+          padding: 5px 5px 5px 100px;
+          height: 35px;
+
+          li {
+            display: inline-block;
+            margin: 5px 20px 0 0;
+
+            i {
+              margin-right: 8px;
+            }
+
+            a {
+              color: #fff;
+              text-decoration: none;
+
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+
+            &.share-buttons {
+              float: right;
+              margin: 0 0 -5px;
+            }
+          }
         }
       }
 
