--- a/assets/src/styles/includes/sidebar.less
+++ b/assets/src/styles/includes/sidebar.less
@@ -1,6 +1,11 @@
 .sidebar {
   width: 340px;
   background: #E3E6E8;
+  display: none;
+
+  @media (min-width: 1200px) {
+    display: block;
+  }
 
   .sidebar-header {
     color: #fff;
